carlos-Dgreat/src/index.css
@import "tailwindcss";
@plugin "daisyui";

.menu a:focus,
.menu a:active,
.menu a:focus-visible {
  background-color: transparent !important;
  color: inherit !important;
  box-shadow: none !important;
  outline: none !important;
}

@theme {
  --breakpoint-xs: 30rem;     /* 480px */
  --breakpoint-sm: 40rem;     /* 640px */
  --breakpoint-md: 48rem;     /* 768px */
  --breakpoint-lg: 64rem;     /* 1024px */
  --breakpoint-xl: 80rem;     /* 1280px */
  --breakpoint-2xl: 100rem;   /* 1600px */
  --breakpoint-3xl: 120rem;   /* 1920px */
}

